--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,7 +14,11 @@ h1, h2, h3, h4, h5 {
   font-family: "Poppins", sans-serif !important;
 }
 
-p, span, a {
+h2, h3 {
+  font-weight: 600;
+}
+
+p, span, a, label {
   font-family: "Open Sans", sans-serif !important;
 }
 
