--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,3 +1,15 @@
+.login-keluarga {
+    background-image: url('../assets/bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.login-admin {
+    background-image: url('../assets/admin-login.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .app-container {
-    padding: 15px;
+    min-height: 100vh;
 }
