--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,11 +1,11 @@
+.side-login {
+    padding: 50px;
+    height: 100vh !important;
+}
 #login {
     height: 100vh !important;
     // background-image: url('assets/login-bg.webp');
     // background-position: center;
     // background-repeat: no-repeat;
     // background-size: cover;
-}
-
-.login-form-box {
-    padding: 50px;
 }
