--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,16 +1,5 @@
-.app-container {
-  padding: 15px;
-}
-
-#login {
-  height: 100vh !important;
-}
-
-.login-form-box {
-  padding: 50px;
-}
-
 h1, h2, h3, h4, h5 {
+  color: #444444 !important;
   font-family: "Poppins", sans-serif !important;
 }
 
@@ -19,11 +8,50 @@ h2, h3 {
 }
 
 p, span, a, label {
+  font-size: 14px;
   font-family: "Open Sans", sans-serif !important;
+}
+
+p, span, label {
+  color: #444444;
+  font-weight: 600;
 }
 
 .font-semi-bold {
   font-weight: 600 !important;
+}
+
+.v-input__slot {
+  margin-top: 6px;
+  border-color: #f5f5f5 !important;
+  background: #f5f5f5 !important;
+}
+
+.login-keluarga {
+  background-image: url("../assets/bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.login-admin {
+  background-image: url("../assets/admin-login.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.app-container {
+  min-height: 100vh;
+}
+
+.side-login {
+  padding: 50px;
+  height: 100vh !important;
+}
+
+#login {
+  height: 100vh !important;
 }
 
 /*# sourceMappingURL=style.css.map */
