--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,8 @@
 @import "variables";
+@import "typography";
+@import "forms";
+
+
 @import "app";
 @import "admin";
 @import "login";
-@import "typography";
