changed route names and enhanced UI

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -4,8 +4,8 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.login-admin {
-    background-image: url('../assets/admin-login.jpg');
+.login-pengurus {
+    background-image: url('../assets/pengurus-login.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
