--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -34,8 +34,8 @@ p, span, label {
   background-size: cover;
 }
 
-.login-admin {
-  background-image: url("../assets/admin-login.jpg");
+.login-pengurus {
+  background-image: url("../assets/pengurus-login.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
