--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -5,6 +5,6 @@ input {
     background: #fbfbfb !important;
     margin-top: 6px;
     fieldset {
-        border-color: #ebebeb !important;
+        border-color: $lightGrey !important;
     }
 }
