--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7,18 +7,22 @@ h2, h3, h4, h5 {
   font-weight: 600;
 }
 
-p, span, a, label {
+p, span, a, label, tr {
   font-size: 14px;
   font-family: "Open Sans", sans-serif !important;
 }
 
-p, span, label {
+span, label {
   color: #444444;
   font-weight: 600;
 }
 
 .font-semi-bold {
   font-weight: 600 !important;
+}
+
+.color-white {
+  color: #fff !important;
 }
 
 input {
