--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -37,6 +37,13 @@ input {
   border-color: #ebebeb !important;
 }
 
+.image-preview {
+  margin-top: 10px;
+  padding: 5px;
+  border: 2px dashed #c2c2c2;
+  width: 300px;
+}
+
 .login-keluarga {
   background-image: url("../assets/bg.jpg");
   background-position: center;
