--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -8,3 +8,9 @@ input {
         border-color: $lightGrey !important;
     }
 }
+.image-preview {
+    margin-top: 10px;
+    padding: 5px;
+    border: 2px dashed #c2c2c2;
+    width: 300px;
+}
