--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,7 +8,7 @@ h2, h3, h4, h5 {
 }
 
 p, span, a, label, tr {
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Open Sans", sans-serif !important;
 }
 
@@ -64,6 +64,10 @@ input {
 
 .outline-grey {
   border-color: #ebebeb !important;
+}
+
+.card-border {
+  border-width: 3px !important;
 }
 
 .side-login {
