--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -56,6 +56,10 @@ input {
   width: fit-content;
 }
 
+.chat-text-break {
+  white-space: pre-wrap !important;
+}
+
 .chat-balloon-left {
   background-color: #ebebeb;
 }
