--- a/src/scss/chat.scss
+++ b/src/scss/chat.scss
@@ -8,6 +8,9 @@
     position: relative;
     width: fit-content;
 }
+.chat-text-break {
+    white-space: pre-wrap !important;
+}
 .chat-balloon-left {
     background-color: $lightGrey;
 }
