--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,14 +1,14 @@
 .login-keluarga {
-    background-image: url('../assets/bg.jpg');
+    background-image: url('../assets/keluarga-login.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 .login-pengurus {
     background-image: url('../assets/pengurus-login.jpg');
-    background-position: center;
+    background-position: right;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:contain
 }
 .app-container {
     min-height: 100vh;
